1.优化角色权限管理 2.Fixbug 多语言

--- a/src/CompanyName.ProjectName.Web/Views/Guests/Index.cshtml
+++ b/src/CompanyName.ProjectName.Web/Views/Guests/Index.cshtml
@@ -52,7 +52,7 @@
             <form action="api/services/app/guest/create" data-dt="#guestIndex-table">
                 <div class="modal-header">
                     <h5 class="modal-title">
-                        <span>创建嘉宾</span>
+                        <i class="fas fa-plus fa-sm text-primary"></i><span class="text-muted pl-2">@L("Create")</span>
                     </h5>
                 </div>
                 <div class="modal-body">
@@ -120,7 +120,7 @@
                 <input type="hidden" name="Id" />
                 <div class="modal-header">
                     <h5 class="modal-title">
-                        <span>编辑嘉宾</span>
+                        <i class="fas fa-pencil-alt fa-sm text-primary"></i><span class="text-muted pl-2">@L("Edit")</span>
                     </h5>
                 </div>
                 <div class="modal-body">
