--- a/src/CompanyName.ProjectName.Web/Views/ZeroAnalasy/AuditLog.cshtml
+++ b/src/CompanyName.ProjectName.Web/Views/ZeroAnalasy/AuditLog.cshtml
@@ -21,16 +21,16 @@
         <table id="auditLog-table" class="display">
             <thead>
                 <tr>
-                    <th>时间</th>
-                    <th>操作者</th>
-                    <th>调用服务</th>
-                    <th>方法</th>
-                    <th>参数</th>
-                    <th>持续时间</th>
-                    <th>IP地址</th>
-                    <th>客户端</th>
-                    <th>浏览器</th>
-                    <th>异常</th>
+                    <th>@L("OccurrenceTime")</th>
+                    <th>@L("Operator")</th>
+                    <th>@L("Service")</th>
+                    <th>@L("Method")</th>
+                    <th>@L("Params")</th>
+                    <th>@L("Duration")</th>
+                    <th>@L("IpAddress")</th>
+                    <th>@L("Client")</th>
+                    <th>@L("Browser")</th>
+                    <th>@L("Exception")</th>
                 </tr>
             </thead>
         </table>
