--- a/src/CompanyName.ProjectName.Web/Views/ZeroAnalasy/LoginAttemptLog.cshtml
+++ b/src/CompanyName.ProjectName.Web/Views/ZeroAnalasy/LoginAttemptLog.cshtml
@@ -22,10 +22,10 @@
             <thead>
                 <tr>
                     <th>@L("UserName")</th>
-                    <th>IP地址</th>
-                    <th>客户端</th>
-                    <th>结果</th>
-                    <th>尝试时间</th>
+                    <th>@L("IpAddress")</th>
+                    <th>@L("Client")</th>
+                    <th>@L("Result")</th>
+                    <th>@L("OccurrenceTime")</th>
                 </tr>
             </thead>
         </table>
