--- a/src/CompanyName.ProjectName.Web/Views/ZeroLocalization/Index.cshtml
+++ b/src/CompanyName.ProjectName.Web/Views/ZeroLocalization/Index.cshtml
@@ -44,7 +44,7 @@
                 <input type="hidden" name="Id" />
                 <div class="modal-header">
                     <h5 class="modal-title">
-                        <span>编辑</span>
+                        <i class="fas fa-pencil-alt fa-sm text-primary"></i><span class="text-muted pl-2">@L("Edit")</span>
                     </h5>
                 </div>
                 <div class="modal-body">
