--- a/src/CompanyName.ProjectName.Web/Views/ZeroNotifications/Index.cshtml
+++ b/src/CompanyName.ProjectName.Web/Views/ZeroNotifications/Index.cshtml
@@ -10,7 +10,7 @@
 </nav>
 <ul class="nav nav-tabs mb-3">
     <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#nav-read">阅读</a>
+        <a class="nav-link active" data-toggle="tab" href="#nav-read">阅读</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" data-toggle="tab" href="#nav-subscribe">订阅</a>
@@ -23,11 +23,11 @@
                 <div class="bd-highlight adbp-toolbar">
                     <div class="float-left">
                         <div class="input-group">
-                            <button id="btn-notification_read" type="button" class="btn btn-outline-info adbp-toolbar-btn" title="设置已读" disabled="disabled">
-                                <i class="far fa-envelope-open"></i>
-                            </button>
                             <button id="btn-notification_unread" type="button" class="btn btn-outline-info adbp-toolbar-btn" title="设置未读" disabled="disabled">
                                 <i class="fas fa-envelope"></i>
+                            </button>
+                            <button id="btn-notification_read" type="button" class="btn btn-outline-info adbp-toolbar-btn" title="设置已读" disabled="disabled">
+                                <i class="far fa-envelope-open"></i>
                             </button>
                         </div>
                     </div>
