--- a/src/CompanyName.ProjectName.Web/Views/ZeroSystem/Settings.cshtml
+++ b/src/CompanyName.ProjectName.Web/Views/ZeroSystem/Settings.cshtml
@@ -55,15 +55,15 @@
 <ul class="nav nav-tabs mb-3" role="tablist">
     <li class="nav-item">
         @*日期和时间格式，设置默认语言*@
-        <a class="nav-link active" data-toggle="tab" href="#nav-time_Language">Settings</a>
+        <a class="nav-link active" data-toggle="tab" href="#nav-time_Language">@L("Settings")</a>
     </li>
     <li class="nav-item">
         @*如登录失败后启用用户的账户锁定等*@
-        <a class="nav-link" data-toggle="tab" href="#nav-security">安全</a>
+        <a class="nav-link" data-toggle="tab" href="#nav-security">@L("Securities")</a>
     </li>
     <li class="nav-item">
 
-        <a class="nav-link" data-toggle="tab" href="#nav-services">LDAP / Mail</a>
+        <a class="nav-link" data-toggle="tab" href="#nav-services">@L("LDAPMail")</a>
     </li>
 </ul>
 <div class="tab-content">
