--- a/src/CompanyName.ProjectName.Web/Views/ZeroRoles/Index.cshtml
+++ b/src/CompanyName.ProjectName.Web/Views/ZeroRoles/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@using Adbp.Zero.Authorization.Roles.Dto
 @using Abp.Application.Services.Dto
+@using Adbp.Zero.Authorization
 @{
     ViewBag.Title = "Index";
     ViewBag.ActiveMenu = ZeroPageNames.RoleManagement;
 }
-@{ 
+@{
     var superadminGroups = new string[] { "USER", "Role", "USER_ROLE", "SYSOBJECT", "OU_USER", "SETTING_LOG", "LOCALIZATION", "NOTIFICATION" };
 }
 <nav aria-label="breadcrumb">
@@ -13,100 +14,96 @@
         <li class="breadcrumb-item active" aria-current="page">Roles</li>
     </ol>
 </nav>
-<div class="card adbp-background">
-    <div class="card-body">
-        <div class="bd-highlight adbp-toolbar">
-            <div class="float-left">
-                <div class="input-group">
-                    <button type="button" class="btn btn-outline-info adbp-toolbar-btn" data-toggle="modal" data-target="#RoleCreateModal" title="添加角色">
-                        <i class="fas fa-plus fa-sm"></i>
-                    </button>
-                    <button id="btn-roleIndex_edit" type="button" class="btn btn-outline-info adbp-toolbar-btn" title="编辑角色" disabled="disabled">
-                        <i class="fas fa-pencil-alt fa-sm"></i>
-                    </button>
-                    <button id="btn-roleIndex_delete" type="button" class="btn btn-outline-info adbp-toolbar-btn" title="删除角色" disabled="disabled">
-                        <i class="fas fa-trash-alt fa-sm"></i>
-                    </button>
+<div class="row">
+    <div class="col">
+        <div class="card">
+            <div class="card-body">
+                <div class="bd-highlight adbp-toolbar">
+                    <div class="float-left">
+                        <div class="input-group">
+                            <button type="button" class="btn btn-outline-info adbp-toolbar-btn" data-toggle="modal" data-target="#RoleCreateModal" title="@L("Create")"
+                                    @GetDisabledStrIfNotGranted(ZeroPermissionNames.Permissions_Role_Create)>
+                                <i class="fas fa-plus fa-sm"></i>
+                            </button>
+                            <button id="btn-roleIndex_edit" type="button" class="btn btn-outline-info adbp-toolbar-btn" data-toggle="modal" data-target="#RoleEditModal" title="@L("Edit")" disabled="disabled">
+                                <i class="fas fa-pencil-alt fa-sm"></i>
+                            </button>
+                            <button id="btn-roleIndex_delete" type="button" class="btn btn-outline-info adbp-toolbar-btn" title="@L("Delete")" disabled="disabled">
+                                <i class="fas fa-trash-alt fa-sm"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="float-right">
+                        <div class="input-group">
+                            <input id="table-search" type="text" class="form-control" placeholder="search all">
+                        </div>
+                    </div>
                 </div>
+                <table id="rolesIndex-table" class="display">
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>@L("RoleName")</th>
+                            <th>@L("DisplayName")</th>
+                            <th>@L("LastModificationTime")</th>
+                        </tr>
+                    </thead>
+                </table>
             </div>
-            <div class="float-right">
-                <div class="input-group">
-                    <input id="table-search" type="text" class="form-control" placeholder="search all">
+        </div>
+    </div>
+    <div class="col role-deselect">
+        <div class="card">
+            <div class="card-header">
+                <div class="float-left">
+                    <h4>@L("RoleMember")</h4>
+                </div>
+                <div class="float-right">
+                    <p>@L("SelectARole")</p>
                 </div>
             </div>
         </div>
-        <table id="rolesIndex-table" class="display">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>@L("RoleName")</th>
-                    <th>@L("DisplayName")</th>
-                    <th>最后修改时间</th>
-                </tr>
-            </thead>
-        </table>
+    </div>
+    <div class="col d-none role-select accordion accordionPermissions">
+        <form action="api/services/app/role/setPermissions" data-dt="#rolesIndex-table">
+            @Html.Action("PermissionsSelection", "ZeroRoles")
+        </form>
     </div>
 </div>
+
 
 <div class="modal fade" id="RoleCreateModal" tabindex="-1" role="dialog" aria-labelledby="RoleCreateModalLabel" data-backdrop="static">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <form id="roleCreateForm" action="/ZeroRoles/CreateRoleAsync">
+            <form id="roleCreateForm" action="api/services/app/role/createRole" data-dt="#rolesIndex-table">
                 <div class="modal-header">
                     <h5 class="modal-title">
-                        <span>@L("CreateNewRole")</span>
+                        <i class="fas fa-plus fa-sm text-primary"></i><span class="text-muted pl-2">@L("Create")</span>
                     </h5>
                 </div>
                 <div class="modal-body">
-                    <ul class="nav nav-tabs mb-3" role="tablist">
-                        <li class="nav-item">
-                            <a class="nav-link active" data-toggle="tab" href="#nav-basic">Role Details</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#nav-permissions">Role Permissions</a>
-                        </li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane fade show active" id="nav-basic" role="tabpanel">
-                            <div class="form-group row">
-                                <label class="col-sm-2 col-form-label adbp-mask">@L("RoleName")</label>
-                                <div class="col-sm-10">
-                                    <input type="text" name="Name" data-vd="{name:'role name', r:true, maxL:20}" class="form-control" placeholder="@L("RoleName")">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label class="col-sm-2 col-form-label adbp-mask">@L("DisplayName")</label>
-                                <div class="col-sm-10">
-                                    <input type="text" name="DisplayName" data-vd="{name:'display name', r:true, maxL:32}" class="form-control" placeholder="@L("DisplayName")">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label class="col-sm-2 col-form-label">Description</label>
-                                <div class="col-sm-10">
-                                    <textarea name="Description" class="form-control" rows="3" placeholder="Role Description"></textarea>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="nav-permissions" class="tab-pane fade" role="tabpanel">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title">Business</h5>
-                                    @Html.Action("PermissionsSelection", "ZeroRoles", new { identifier = "c" })
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title">Superadmin</h5>
-                                    @Html.Action("PermissionsSelection", "ZeroRoles", new { identifier = "c", groupNames = superadminGroups })
-                                </div>
-                            </div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label adbp-mask">@L("RoleName")</label>
+                        <div class="col-sm-10">
+                            <input type="text" name="Name" data-vd="{name:'@L("RoleName")', r:true, maxL:20}" class="form-control">
                         </div>
                     </div>
-
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label adbp-mask">@L("DisplayName")</label>
+                        <div class="col-sm-10">
+                            <input type="text" name="DisplayName" data-vd="{name:'@L("DisplayName")', r:true, maxL:32}" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label">@L("Description")</label>
+                        <div class="col-sm-10">
+                            <textarea name="Description" class="form-control" rows="3"></textarea>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">@L("Cancel")</button>
-                    <button type="submit" class="btn btn-primary">@L("Save")</button>
+                    <button type="button" class="btn btn-primary adbp-formSubmit">@L("Save")</button>
                 </div>
             </form>
         </div>
@@ -115,62 +112,37 @@
 <div class="modal fade" id="RoleEditModal" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <form id="roleEditForm">
+            <form id="roleEditForm" action="api/services/app/role/updateRole" data-dt="#rolesIndex-table">
                 <div class="modal-header">
                     <h5 class="modal-title">
-                        <span>@L("EditRole")</span>
+                        <i class="fas fa-pencil-alt fa-sm text-primary"></i><span class="text-muted pl-2">@L("Edit")</span>
                     </h5>
                 </div>
                 <div class="modal-body">
                     <input type="hidden" name="Id" />
-                    <ul class="nav nav-tabs mb-3" role="tablist">
-                        <li class="nav-item">
-                            <a class="nav-link active" data-toggle="tab" href="#nav-basic2">Role Details</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" data-toggle="tab" href="#nav-permissions2">Role Permissions</a>
-                        </li>
-                    </ul>
-                    <div class="tab-content">
-                        <div class="tab-pane fade show active" id="nav-basic2" role="tabpanel">
-                            <div class="form-group row">
-                                <label class="col-sm-2 col-form-label adbp-mask">@L("RoleName")</label>
-                                <div class="col-sm-10">
-                                    <input type="text" name="Name" data-vd="{name:'role name', r:true, maxL:20}" class="form-control" placeholder="@L("RoleName")">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label class="col-sm-2 col-form-label adbp-mask">@L("DisplayName")</label>
-                                <div class="col-sm-10">
-                                    <input type="text" name="DisplayName" data-vd="{name:'display name', r:true, maxL:20}" class="form-control" placeholder="@L("DisplayName")">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label class="col-sm-2 col-form-label">Description</label>
-                                <div class="col-sm-10">
-                                    <textarea name="Description" class="form-control" rows="3" placeholder="Role Description"></textarea>
-                                </div>
-                            </div>
+                    <input type="hidden" name="IsStatic" />
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label adbp-mask">@L("RoleName")</label>
+                        <div class="col-sm-10">
+                            <input type="text" name="Name" data-vd="{name:'@L("RoleName")', r:true, maxL:20}" class="form-control">
                         </div>
-                        <div class="tab-pane fade" id="nav-permissions2" role="tabpanel">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title">Business</h5>
-                                    @Html.Action("PermissionsSelection", "ZeroRoles", new { identifier = "e" })
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5 class="card-title">Superadmin</h5>
-                                    @Html.Action("PermissionsSelection", "ZeroRoles", new { identifier = "e", groupNames = superadminGroups })
-                                </div>
-                            </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label adbp-mask">@L("DisplayName")</label>
+                        <div class="col-sm-10">
+                            <input type="text" name="DisplayName" data-vd="{name:'@L("DisplayName")', r:true, maxL:20}" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label">@L("Description")</label>
+                        <div class="col-sm-10">
+                            <textarea name="Description" class="form-control" rows="3"></textarea>
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">@L("Cancel")</button>
-                    <button type="button" id="btn-editForm_submit" class="btn btn-primary">@L("Save")</button>
+                    <button type="button" class="btn btn-primary adbp-formSubmit">@L("Save")</button>
                 </div>
             </form>
         </div>
